Clarification for README.txt.

--- a/A_Netflix_Tour_of_Data_Science_Film_suggestion_by_diffusion_on_graphs.ipynb
+++ b/A_Netflix_Tour_of_Data_Science_Film_suggestion_by_diffusion_on_graphs.ipynb
@@ -36,7 +36,7 @@
     "Imagine now that you are a modest student, you cannot afford those services but you do not want to spend your Saturday evening looking for a film instead of watching it. However, you have followed a course in Data Science and you wonder if you can finally get rid of this time loss by imagining a system that would target for you the films you would like.\n",
     "One may think that the scenario, the performance of the actors and the depth of the story are important criteria to know if someone is going to enjoy the film or not... but then, realizing that “Furious 7” was ranked 7, “Transformers: Dark of the Moon” was ranked 20 in a [list of highest-grossing films](https://en.wikipedia.org/wiki/List_of_highest-grossing_films), we wondered if simpler criteria (such as the cast, the crew, the genre, the budget, the advertising...) were not more critical in the valuation of the film. The main idea that we are going to use here is that if you liked (resp. disliked) a film with a particular cast, crew, genre, you might also like (resp. dislike) a film presenting similar features.\n",
     "\n",
-    "To get an idea of how are the similarities between every films we can use graphs. Indeed when we are building graphs we are making strong, weak or no connections between nodes to represent how similar two nodes on the graph are. Those connections are the edges and the force of those connections are the weights. Thus we can build several adjacency matrices representing the similarities of the films (nodes) for different features. From here we want to analyse and predict the likings of someone called “user”. A user can only inform us if he liked or not a film with a vote between 0 and 10 (10 being that he loved the film). Then to predict the likings of this user, our idea is to combine the graph with the signal representing the average of the vote given by all users, the signal representing our particular user votes. Our user has only seen a few films and his votes propagate to the closest neighbours using diffusion with a heat-kernel slightly modified to make sense in this subject. This would create a personalized signal for this user based on the average rating of the others (because it would takes too long for the users to watch enough films to have relevant proposals)."
+    "To get an idea of how are the similarities between every films we can use graphs. Indeed when we are building graphs we are making strong, weak or no connections between nodes to represent how similar two nodes on the graph are. Those connections are the edges and the force of those connections are the weights. Thus we can build several adjacency matrices representing the similarities of the films (nodes) for different features. From here we want to analyse and predict the likings of someone called “user”. A user can only inform us if he liked or not a film with a vote between 0 and 10 (10 being that he loved the film). Then to predict the likings of this user, our idea is to combine the graph with the signal representing the average of the vote given by all users, and the signal representing our particular user votes. Our user has only seen a few films and his votes propagate to the closest neighbours using diffusion with a heat-kernel slightly modified to make sense in this subject. This would create a personalized signal for this user based on the average rating of the others (because it would takes too long for the users to watch enough films to have relevant proposals)."
    ]
   },
   {
@@ -75,7 +75,7 @@
     "\n",
     "This project is cut into different notebooks.\n",
     "\n",
-    "This notebook correspond to the application of our model to the different graph we have built.\n",
+    "This notebook correspond to the application of our model to the different graphs we have built.\n",
     "If the exports haven't been made the following notebooks must be ran in the following order:\n",
     "\n",
     "1. The notebook \"Adjacency_Cast\". It corresponds to the notebook used to create an adjacency matrix from the cast.\n",
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The different graph needed in this notebook are computed in the other notebooks. More informations in the section \"Organization\"."
+    "The different graphs needed in this notebook are computed in the other notebooks. More informations in the section \"Organization\"."
    ]
   },
   {
@@ -435,7 +435,7 @@
    "source": [
     "To influence the other nodes and to make a graph specific to one user we want to use diffusion and more precisely the heat-kernel.\n",
     "\n",
-    "As we have built graphs with the goal to make close two films similar. If we change the vote of a node we want it to diffuse its note, to influence the films similar to it meaning its close neighbours. Then, we want to create a diffusion by closest neighbours. This is an approach that is suited to use the heat-kernel as it simulate the heat diffusion, a diffusion by closest neighbours.\n",
+    "We have built graphs with the goal to make close two films similar. If we change the vote of a node we want it to diffuse its note, to influence the films similar to it meaning its close neighbours. Then, we want to create a diffusion by closest neighbours. This is an approach that is suited to use the heat-kernel as it simulate the heat diffusion, a diffusion by closest neighbours.\n",
     "\n",
     "However, to diffuse a single vote on a graph we have to consider a Dirac of this vote and then apply the heat-kernel to this Dirac (in the spectral domain). The problem is that we are considering a base signal: the average vote. This signal is the starting point, it is the notes we take into account until the user modifies them. It wouldn’t be interesting to build a signal from the start in our case. But this means that we cannot just change the vote of one node on the signal and apply the heat-kernel: we would just diffuse every node in it and it would be meaningless.\n",
     "Then, we need to take into account the diffusion by the heat-kernel of a single node in a base signal already present. For that we need to adapt the diffusion."
@@ -445,7 +445,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this project we will only consider that the user likes a movie and vote 10 or dislikes and vote 0. Thus we have two different cases of diffusion one with a source heating-up the grah (10) and the other cooling down the graph.\n",
+    "In this project we will only consider that the user likes a movie and vote 10 or dislikes and vote 0. Thus we have two different cases of diffusion one with a source heating up the grah (10) and the other cooling down the graph.\n",
     "\n",
     "If we consider the 10, here is the how we adapt the diffusion:\n",
     "1. The vote of the user creates a Dirac of 10 in the position of the considered node.\n",
@@ -455,7 +455,7 @@
     "5. However, in the case of films, placing a heat source can't cool the other nodes (liking a type of films doesn’t mean we will dislike the other kinds) so the new signal only take the means if it is superior to the vote of the base signal.\n",
     "6. Finally, the votes of the user are fixed and cannot be changed unlike in a classical heat diffusion where the heat source would have become colder as it gave its heat to its neighbours.\n",
     "\n",
-    "If we consider the 0, the staps are basically the same but we are cooling the graph. The main difference is that after multiplying the Dirac so that the highest value is 10 the diffused signal is : 10 - diffused signal. Like that the Dirac that we have considered to see the diffusion is now a cold source."
+    "If we consider the 0, the steps are basically the same but we are cooling the graph. The main difference is that after multiplying the Dirac so that the highest value is 10 the diffused signal becomes: 10 - diffused signal. Like that the Dirac that we have considered is now a cold source."
    ]
   },
   {
@@ -525,10 +525,10 @@
     "The code that we are using is basically the same for each graph so we explain it here:\n",
     "1. We load the adjacency of the graph we want to work with.\n",
     "2. We create the corresponding graph by using PyGSP.\n",
-    "3. We use our function Signal_Informations to plot the GFT of our base signal on the graph and the heat-kernel in the spectral domain to manage the Tau parameter of the heat-kernal. We do it only once for the first base signal.\n",
+    "3. We use our function Signal_Informations to plot the GFT of our base signal on the graph and the heat-kernel in the spectral domain to manage the Tau parameter of the heat-kernel. We do it only once for the first base signal.\n",
     "4. We load the dataframe from Gephi.\n",
     "5. We use our function Fill_Dataframe to create a dataframe for Gephi with each step of our process and to obtain the final signal.\n",
-    "5. We export the dataframe for representation on Gephi."
+    "5. We export the dataframe."
    ]
   },
   {
@@ -565,7 +565,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2019-01-18 12:31:13,856:[WARNING](pygsp.graphs.graph.compute_fourier_basis): Computing the full eigendecomposition of a large matrix (4803 x 4803) may take some time.\n"
+      "2019-01-19 00:06:16,055:[WARNING](pygsp.graphs.graph.compute_fourier_basis): Computing the full eigendecomposition of a large matrix (4803 x 4803) may take some time.\n"
      ]
     },
     {
@@ -944,7 +944,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2019-01-18 12:31:42,690:[WARNING](pygsp.graphs.graph.compute_fourier_basis): Computing the full eigendecomposition of a large matrix (4803 x 4803) may take some time.\n"
+      "2019-01-19 00:07:03,294:[WARNING](pygsp.graphs.graph.compute_fourier_basis): Computing the full eigendecomposition of a large matrix (4803 x 4803) may take some time.\n"
      ]
     },
     {
@@ -1323,7 +1323,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2019-01-18 12:32:16,965:[WARNING](pygsp.graphs.graph.compute_fourier_basis): Computing the full eigendecomposition of a large matrix (4803 x 4803) may take some time.\n"
+      "2019-01-19 00:07:44,189:[WARNING](pygsp.graphs.graph.compute_fourier_basis): Computing the full eigendecomposition of a large matrix (4803 x 4803) may take some time.\n"
      ]
     },
     {
@@ -1702,7 +1702,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2019-01-18 12:32:51,480:[WARNING](pygsp.graphs.graph.compute_fourier_basis): Computing the full eigendecomposition of a large matrix (4803 x 4803) may take some time.\n"
+      "2019-01-19 00:08:21,773:[WARNING](pygsp.graphs.graph.compute_fourier_basis): Computing the full eigendecomposition of a large matrix (4803 x 4803) may take some time.\n"
      ]
     },
     {
@@ -1722,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1819,7 +1819,7 @@
        "4           4   4      4      NaN       8                92            6.0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1831,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2021,7 +2021,7 @@
        "4                 0.0            6.0                  1.0            6.0  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2033,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2058,14 +2058,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have a new signal for each graph we want to see if there is a efficient way to consider all of them in a single signal. For that we are trying the mean terms by terms of the four signal we have.\n",
+    "Now that we have a new signal for each graph we want to see if there is a efficient way to consider all of them in a single signal. For that we are trying the mean terms by terms of the four signals we have.\n",
     "\n",
     "We add those signals to the dataframe to see its representation on the different graphs."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2074,7 +2074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2086,7 +2086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2114,7 +2114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this test based on superheroes movies we are quite pleased with the results. The modification on the different graph are correspondinf to what we expected."
+    "For this test based on superheroes movies we are quite pleased with the results. The modification on the different graphs are corresponding to what we expected."
    ]
   },
   {
@@ -2126,7 +2126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
